changed the dex entry feature

--- a/pages/page2.html
+++ b/pages/page2.html
@@ -17,34 +17,31 @@
                 <p class="story-text">You take the Left Path
                     <br>
                     You have run into a swarm of Durant who drag you into their nest</p>
-                <h2 class="game-over-text">Game Over</h2>
+                    <h2 class="game-over-text">Game Over</h2>
+                    <button popovertarget="myheader"><img
+                        class
+                        src="https://static.thenounproject.com/png/594337-200.png"
+                        alt="dexicon"
+                        width="50"
+                        height="50"
+                        /></button>
                 <div class="play-again">
                     <a href="../index.html">
                         <h2 class="button-style">Play Again</h2>
                     </a>
                 </div>
-                <div class="myDIV">
-                    <img
-                      class
-                      src="https://static.thenounproject.com/png/594337-200.png"
-                      alt="dexicon"
-                      width="50"
-                      height="50"
-                    />
-                  </div>
-                  <div class="hide infobox">
-                    <img
-                      class
-                      src="https://archives.bulbagarden.net/media/upload/0/04/Menu_HOME_0632.png"
-                      alt="durant-icon"
-                      width="100"
-                      height="100"
-                    />
-                    <br>
-                    <h4>Durant - The Iron Ant Pokémon</h4>
-                    <p>Durant dig nests in mountains. They build their complicated, interconnected tunnels into mazes.</p>
-                    <br>
-                </div>
+                <div popover id="myheader"><img
+                    class
+                    src="https://archives.bulbagarden.net/media/upload/0/04/Menu_HOME_0632.png"
+                    alt="durant-icon"
+                    width="100"
+                    height="100"
+                  />
+                  <br>
+                  <h4>Durant - The Iron Ant Pokémon</h4>
+                  <p>Durant dig nests in mountains. <br>They build their complicated, interconnected tunnels into mazes.</p>
+                  <br></div>
+
             </div>
         </div>
     </div>
