--- a/pages/page3.html
+++ b/pages/page3.html
@@ -15,6 +15,13 @@
                   Suddenly you are chased by an angry Kleavor
                  <br>Your're on a cliff's end with a river at the bottom with the Kleavor still chasing you!
                   <br>Do you risk the jump?</p> 
+                  <button popovertarget="myheader"><img
+                    class
+                    src="https://static.thenounproject.com/png/594337-200.png"
+                    alt="dexicon"
+                    width="50"
+                    height="50"
+                    /></button>
                  <div id="containerbtn" class="flex-button-area">
                     <div class="left-button">
                       <a href="../pages/page4.html">
@@ -26,18 +33,7 @@
                         <h2 class="button-style">Don't Jump</h2>
                       </a>
                     </div>
-                  </div>
-                  <div class="myDIV">
-                    <img
-                      class
-                      src="https://static.thenounproject.com/png/594337-200.png"
-                      alt="dexicon"
-                      width="50"
-                      height="50"
-                    />
-                  </div>
-                  <div class="hide infobox">
-                    <img
+                    <div popover id="myheader"><img
                       class
                       src="https://archives.bulbagarden.net/media/upload/3/3d/Menu_HOME_0900.png"
                       alt="kleavoricon"
@@ -46,9 +42,10 @@
                     />
                     <br>
                     <h4>Kleavor - The Axe Pokémon</h4>
-                    <p>This Pokémon is a rough, crude, and violent sort. It swings around its large, heavy stone axes to finish off its prey.</p>
-                    <br>
-                </div>
+                    <p>This Pokémon is a rough, crude, and violent sort. <br> It swings around its large, heavy stone axes to finish off its prey.</p>
+                    <br></div>
+                  </div>
+                  
            </div>
         </div>
 </body>
