--- a/pages/page7.html
+++ b/pages/page7.html
@@ -19,33 +19,29 @@
                     You are Toast
                 </p>
                 <h2 class="game-over-text">Game Over</h2>
+                <button popovertarget="myheader"><img
+                    class
+                    src="https://static.thenounproject.com/png/594337-200.png"
+                    alt="dexicon"
+                    width="50"
+                    height="50"
+                    /></button>
                 <div class="play-again">
                     <a href="../index.html">
                         <h2 class="button-style">Play Again</h2>
                     </a>
                 </div>
-                
-                <div class="myDIV">
-                    <img
-                      class
-                      src="https://static.thenounproject.com/png/594337-200.png"
-                      alt="dexicon"
-                      width="50"
-                      height="50"
-                    />
-                  </div>
-                  <div class="hide infobox">
-                    <img
-                      class
-                      src="https://archives.bulbagarden.net/media/upload/5/55/Menu_HOME_0160.png"
-                      alt="feraligatr-icon"
-                      width="100"
-                      height="100"
-                    />
-                    <br>
-                    <h4>Feraligatr - The Big Jaw Pokémon</h4>
-                    <p>It usually moves slowly, but it goes at blinding speed when it attacks and bites prey.</p>
-                    <br>
+                <div popover id="myheader"><img
+                    class
+                    src="https://archives.bulbagarden.net/media/upload/5/55/Menu_HOME_0160.png"
+                    alt="feraligatr-icon"
+                    width="100"
+                    height="100"
+                  />
+                  <br>
+                  <h4>Feraligatr - The Big Jaw Pokémon</h4>
+                  <p>It usually moves slowly, but it goes at blinding speed when it attacks and bites prey.</p>
+                  <br></div>
                 </div>
 
              </div> 
