--- a/pages/page3.html
+++ b/pages/page3.html
@@ -1,52 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page 3</title>
-    <link rel="stylesheet" href="../style/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>page 3</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../style/styles.css">
 </head>
+
 <body>
-    <div id="container1" class="flex-container">
-        <div id="pagebackthree" class="flex-item">
-             <div class="translucent-panel"> 
-                 <p class="story-text">You take the Right Path
-                  <br>
-                  Suddenly you are chased by an angry Kleavor
-                 <br>Your're on a cliff's end with a river at the bottom with the Kleavor still chasing you!
-                  <br>Do you risk the jump?</p> 
-                  <button popovertarget="myheader"><img
-                    class
-                    src="/assets/dexicon.png"
-                    alt="dexicon"
-                    width="50"
-                    height="50"
-                    /></button>
-                 <div id="containerbtn" class="flex-button-area">
-                    <div class="left-button">
-                      <a href="../pages/page4.html">
-                        <h2 class="button-style">Jump</h2>
-                      </a>
-                    </div>
-                    <div class="right-button">
-                      <a href="../pages/page5.html">
-                        <h2 class="button-style">Don't Jump</h2>
-                      </a>
-                    </div>
-                    <div popover id="myheader"><img
-                      class
-                      src="/assets/kleavoricon.png"
-                      alt="kleavoricon"
-                      width="100"
-                      height="100"
-                    />
-                    <br>
-                    <h4>Kleavor - The Axe Pokémon</h4>
-                    <p>This Pokémon is a rough, crude, and violent sort. <br> It swings around its large, heavy stone axes to finish off its prey.</p>
-                    <br></div>
-                  </div>
-                  
-           </div>
+  <!-- NavBar Code from Bootstrap site -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Jungle Adventure Web Game</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/pokedex.html">PokeDex</a>
+          </li>
+      </div>
+    </div>
+  </nav>
+
+  <div id="container1" class="flex-container">
+    <div id="pagebackthree" class="flex-item">
+      <div class="translucent-panel">
+        <p class="story-text">You take the Right Path
+          <br>
+          Suddenly you are chased by an angry Kleavor
+          <br>Your're on a cliff's end with a river at the bottom with the Kleavor still chasing you!
+          <br>Do you risk the jump?
+        </p>
+        <button popovertarget="myheader"><img class src="/assets/dexicon.png" alt="dexicon" width="50"
+            height="50" /></button>
+        <div id="containerbtn" class="flex-button-area">
+          <div class="left-button">
+            <a href="../pages/page4.html">
+              <h2 class="button-style">Jump</h2>
+            </a>
+          </div>
+          <div class="right-button">
+            <a href="../pages/page5.html">
+              <h2 class="button-style">Don't Jump</h2>
+            </a>
+          </div>
+          <div popover id="myheader"><img class src="/assets/kleavoricon.png" alt="kleavoricon" width="100"
+              height="100" />
+            <br>
+            <h4>Kleavor - The Axe Pokémon</h4>
+            <p>This Pokémon is a rough, crude, and violent sort. <br> It swings around its large, heavy stone axes to
+              finish off its prey.</p>
+            <br>
+          </div>
         </div>
+
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
 </body>
+
 </html>
