--- a/pages/page3.html
+++ b/pages/page3.html
@@ -14,7 +14,10 @@
   <!-- NavBar Code from Bootstrap site -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html">Jungle Adventure Web Game</a>
+      <a class="navbar-brand" href="../index.html"><img src="/assets/dexicon.png" alt="Logo" width="30" height="24"
+          class="d-inline-block align-text-top">
+        Jungle Adventure Web Game
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
