--- a/pages/page6.html
+++ b/pages/page6.html
@@ -1,55 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 6</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Page 6</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../style/styles.css">
 </head>
+
 <body>
-    <!-- NavBar Code from Bootstrap site -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">Jungle Adventure Web Game</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../pages/pokedex.html">PokeDex</a>
-            </li>
+  <!-- NavBar Code from Bootstrap site -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html"><img src="/assets/dexicon.png" alt="Logo" width="30" height="24"
+          class="d-inline-block align-text-top">
+        Jungle Adventure Web Game
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/pokedex.html">PokeDex</a>
+          </li>
+      </div>
+    </div>
+  </nav>
+
+  <div id="container1" class="flex-container">
+    <div id="pagebacksix" class="flex-item">
+      <div class="translucent-panel">
+        <p class="story-text">You grab 'This' Log
+          <br> Fortunately it's a real log.
+          <br>
+          As you float onto shore you begin to feel a mythical presence...
+        </p>
+        <div id="containerbtn" class="flex-button-area">
+          <div class="left-button">
+            <a href="../pages/page8.html">
+              <h2 class="button-style">Go Left</h2>
+            </a>
+          </div>
+          <div class="right-button">
+            <a href="../pages/page9.html">
+              <h2 class="button-style">Go Right</h2>
+            </a>
+          </div>
         </div>
       </div>
-    </nav>
-  
-    <div id="container1" class="flex-container">
-        <div id="pagebacksix" class="flex-item">
-             <div class="translucent-panel"> 
-                 <p class="story-text">You grab 'This' Log
-                  <br> Fortunately it's a real log.
-                  <br>
-                As you float onto shore you begin to feel a mythical presence...</p> 
-                 <div id="containerbtn" class="flex-button-area">
-                    <div class="left-button">
-                      <a href="../pages/page8.html">
-                        <h2 class="button-style">Go Left</h2>
-                      </a>
-                    </div>
-                    <div class="right-button">
-                      <a href="../pages/page9.html">
-                        <h2 class="button-style">Go Right</h2>
-                      </a>
-                    </div>
-                  </div>
-           </div>
-        </div>
+    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
 </body>
+
 </html>
