--- a/pages/page8.html
+++ b/pages/page8.html
@@ -1,73 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 8</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/styles.css">
 </head>
+
 <body>
-      <!-- NavBar Code from Bootstrap site -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html">Jungle Adventure Web Game</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/pokedex.html">PokeDex</a>
-          </li>
-      </div>
-    </div>
-  </nav>
+    <!-- NavBar Code from Bootstrap site -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html"><img src="/assets/dexicon.png" alt="Logo" width="30"
+                    height="24" class="d-inline-block align-text-top">
+                Jungle Adventure Web Game
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/pokedex.html">PokeDex</a>
+                    </li>
+            </div>
+        </div>
+    </nav>
 
     <div id="container1" class="flex-container">
         <div id="pagebackeight" class="flex-item">
 
-            <div class="translucent-panel"> 
+            <div class="translucent-panel">
                 <p class="story-text">You Go Left
                     <br>
                     You manage to spot the Mythical Pokemon Zarude in the distance
                     <br>
-                    While not Mew, is still impressive none the less.</p>
+                    While not Mew, is still impressive none the less.
+                </p>
                 <h2>Not a Win
                     <br>
-                    But not a Complete Loss Either</h2>
-                    <button popovertarget="myheader"><img
-                        class
-                        src="/assets/dexicon.png"
-                        alt="dexicon"
-                        width="50"
-                        height="50"
-                        /></button>
+                    But not a Complete Loss Either
+                </h2>
+                <button popovertarget="myheader"><img class src="/assets/dexicon.png" alt="dexicon" width="50"
+                        height="50" /></button>
                 <div class="play-again">
                     <a href="../index.html">
                         <h2 class="button-style">Play Again</h2>
                     </a>
                 </div>
-                <div popover id="myheader"><img
-                    class
-                    src="/assets/zarudeicon.png"
-                    alt="zarude-icon"
-                    width="100"
-                    height="100"
-                  />
-                  <br>
-                  <h4>Zarude - The Rogue Monkey Pokémon</h4>
-                  <p>Once the vines on Zarude's body tear off, they become nutrients in the soil. <br>This helps the plants of the forest grow.</p>
-                  <br></div>
+                <div popover id="myheader"><img class src="/assets/zarudeicon.png" alt="zarude-icon" width="100"
+                        height="100" />
+                    <br>
+                    <h4>Zarude - The Rogue Monkey Pokémon</h4>
+                    <p>Once the vines on Zarude's body tear off, they become nutrients in the soil. <br>This helps the
+                        plants of the forest grow.</p>
+                    <br>
+                </div>
 
-             </div> 
+            </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
